# tritium

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  SETTINGS.example.jsonc  install.sh
.gemini/agents/: bridge.md  jesse.md  lux.md  nova.md  robert.md  rook.md  sol.md  vex.md
.github/agents/: Bridge.agent.md  Jesse.agent.md  Rook.agent.md  Scout.agent.md  Sol.agent.md  Vex.agent.md
adapters/claude-cli/: CLAUDE.md  README.md
adapters/gemini-cli/: GEMINI.md  README.md
adapters/github-copilot-local/: README.md
adapters/github-copilot-remote/: README.md
adapters/openai-lmstudio/: README.md  package.json
agents/bridge/: MEMORY.md  PORTFOLIO.md  agent.md
bridge/: .env.example  .gitignore  README.md  pyproject.toml
bridge/scripts/: dump_prompt.py  install-task.ps1  run-once.ps1
bridge/tritium_bridge/: __main__.py  actions.py  filedrop.py  ledger.py  lmstudio.py  scheduler.py  tools.py
data/: ledger.schema.sql
docs/: ARCHITECTURE-v4.1.md  ARCHITECTURE-v4.md  SECURITY-tritium-crypt.md  adding-a-new-agent.md  architecture.md  settings-reference.md  troubleshooting.md  usage-api-openai-lmstudio.md  usage-claude-cli.md  usage-gemini-cli.md  usage-vscode-copilot.md
registry/: models.json
scripts/: install-adapter.ps1  install.ps1  install.sh  new-agent.ps1  new-agent.sh  package.ps1  package.sh  runtime-deps.sh  setup-ledger.py  setup.sh  tier-auto  tritium-authorize  tritium-close  tritium-cp  tritium-crypt  tritium-doctor  tritium-id  tritium-open  verify.ps1  verify.sh
team/: TEAM.md
world/: README.md  README.txt
world_vault/: README.md
(+264 files in other folders)
